--- a/play.html
+++ b/play.html
@@ -6,25 +6,16 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Play OvO Classic Game | OvO Unblocked</title>
-     <meta name="description" content="Play OvO Classic Game at OvO Unblocked! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
+    <title> Play OvO Classic Game | OvO Unblocked Games</title>
+     <meta name="description" content="Play OvO Classic Game at OvO Unblocked Games! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
 ">
-    <link rel="canonical" href="https://ovo-classic.github.io//play.html">
-<meta name="author" content="OvO Classic Team">
-<meta name="publisher" content="OvO Classic Team">
+    <link rel="canonical" href="https://ovounblocked-games.github.io//play.html">
+<meta name="author" content="OvO Unblocked Games Team">
+<meta name="publisher" content="OvO Unblocked Games Team">
 
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
-<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQBRF92VLS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-KQBRF92VLS');
-</script>
+	
 
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -753,7 +744,7 @@ function openFullscreen() {
     <h2>How to Play OvO Classic</h2>
     <p>Playing OvO Classic is easy to understand. Your goal is to complete levels by avoiding obstacles, solving puzzles, and reaching the finish line. The levels get harder as you progress, so you’ll need to stay sharp and practice your skills.</p>
     <ol>
-        <li>Open your browsers and visit <a href="https://ovo-classic.github.io" target="_blank">OVO unblocked</a>.</li>
+        <li>Open your browsers and visit <a href="https://ovounblocked-games.github.io" target="_blank">OVO unblocked</a>.</li>
         <li>Move through levels while dodging traps and obstacles.</li>
         <li>Collect any bonuses you find to improve your score.</li>
         <li>Try to finish each level as fast as you can for a high rank.</li>
@@ -775,7 +766,7 @@ function openFullscreen() {
     <hr>
 
     <h2>Where to Play OvO Classic</h2>
-    <p>You can play OvO Classic for free on our website: <a href="https://ovo-classic.github.io" target="_blank">ovo-classic.github.io</a>. The game works directly in your browser, so you don’t need to download anything. Just open the site and start playing!</p>
+    <p>You can play OvO Classic for free on our website: <a href="https://ovounblocked-games.github.io" target="_blank">ovounblocked-games.github.io</a>. The game works directly in your browser, so you don’t need to download anything. Just open the site and start playing!</p>
 
     <h3>Why Play on Our Website?</h3>
     <ul>
@@ -811,7 +802,7 @@ function openFullscreen() {
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p><a href="https://ovo-classic.github.io/">OvO Unblocked</a> @ <span class="current-year"></span></p>
+                            <p><a href="https://ovounblocked-games.github.io/">OvO Unblocked</a> @ <span class="current-year"></span></p>
                         </div>            
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
