--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Responsive css -->
     <link rel="stylesheet" href="/assets/css/responsive.css">
 
-	
+	<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
 
 
 
