--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
 
 	<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
 
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "OvO Unblocked Games",
+  "url": "https://ovounblocked-games.github.io/index.html",
+  "image": "https://ovounblocked-games.github.io/assets/img/logo.png",
+  "description": "Play OvO Unblocked Games online for free! Enjoy fun levels, improve your skills, and have a great time. Easy to play and perfect for everyone. Start now!",
+  "genre": ["Adventure","Racing","Running", "Sports", "Bike","Shooting", "Skill", "Idle"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "OvO Unblocked Games team"
+  },
+  "gamePlatform": ["Web"],
+  "operatingSystem": "Web-based",
+  "author": {
+    "@type": "Organization",
+   "name": "OvO Unblocked Games team"
+  }
+}
+</script>
 
 	
 </head>
