--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <link rel="stylesheet" href="/assets/css/responsive.css">
 
 	<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DSX1W5F55"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9DSX1W5F55');
+</script>
 
 <script type="application/ld+json">
 {
